# gpa

./: .cproject  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  autogen.sh  clean.sh  config.status  configure  configure.ac  cygwin-install.sh  gpa-install.sh  linux-install.sh  mac-install.sh  patch.sh
data/paper/: gpa++_results_paper.txt
etc/GPA__GUI_JAVA_NETBEANS_PROJECT/: GPAC_GUI_DEZ_02.TGZ  GPA__AMPGUI01FEV2010.TGZ  GPA__GUI04FEV2010.TGZ  GPA__GUI05FEV2010.TGZ  GPA__GUI06FEV2010.TGZ  GPA__GUI23ABR2010.TGZ  GPA__GUI24ABR2010.TGZ  GPA__GUI27ABR2010.TGZ  GPA__GUI28MAR2010.TGZ  GPA__GUI30JAN2010.TGZ  GPA__GUI_22JAN2010.TGZ  GPA__GUI_25JAN2010.TGZ  _DIRECTORY
etc/GPA___C___NETBEANS_PROJECT/: GPAC_DEZ_03.TGZ  GPA__02FEV2010.TGZ  GPA__04FEV2010.TGZ  GPA__05FEV2010.TGZ  GPA__12MAI2010.TGZ  GPA__22JAN2010.TGZ  GPA__24ABR2010.TGZ  GPA__25JAN2010.TGZ  GPA__26FEV2010.TGZ  GPA__26JAN2010.TGZ  GPA__28MAR2010.TGZ  _DIRECTORY
etc/GPA___INSTALLER/: GPAC_INSTALLER_DEZ_02.TGZ  GPAPP_INSTALLER_12MAIO2010.TGZ  GPAPP_INSTALLER_24ABR2010.TGZ  GPAPP_INSTALLER_27ABR2010.TGZ  GPA__AMP_INSTALLER_01FEV2010.TG  GPA__INSTALLER_25JAN2010.TGZ  GPA__INSTALLER_26JAN2010.TGZ  GPA__INSTALLER_30JAN2010.TGZ  _DIRECTORY  (+8 more)
gpa/: .cproject  .project
src/: .directory  action.cc  action.h  bootstrap.cc  bootstrap.h  delaunay.cc  delaunay.h  display.cc  display.h  gpa.cc  gpa.h  load_file.cc  load_file.h  main.cc  read_conf.cc  read_conf.h  vetor.cc  vetor.h
triangle/: mxtest2.1.ele  mxtest2.1.node  mxtest2.node  nine.node  triangle.c  triangle_  triangleout.tri  xowme
(+74 files in other folders)
