## Helloworld C++: an example project using Automake

AC_INIT([GPAplusplus C++], [0.5], [cstrieder@gmail.com],
        [gpa], [http://en.wikipedia.org/wiki/Gradient_pattern_analysis])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])

AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
